@startuml "nomina"

class Employee {
  -String DNI;
  -String name;
  -String lastName;
  -String telephoneNumber;
  -String address;
  -String accountNumberBank;
  -List<Contrac> listContrac;
  -List<Paysheet> listPaysheet;
  -List<Position> listPosition;
}

class Contrac{
  -Date datehigh;
  -Date dateLow;
  -String category;
  -String positionDestination;
  -Float salaryBase;
  -Employee employee;
  -List<Complement>listComplemet;
  -List<Triennium> listTriennium;
}

class Complement{
    -String description;
    -Float amount; "importe"
    -String type;
}

class Triennium{
    -Date dateBennging;
    -Float amount;
    -String categoryAssociated;
}

class Position{
    -String namePosition;
    -Date dateBenning;
    -Date dateEnd;
    -Float amount;
}

class Deduction{
    -String description;
    -Float percentageFijo;
    -List<Section> sectionsList;
}

class Section{
    -Float limitLower;
    -Float limitUpper;
    -Float percentage;
}

class Paysheet{
    -Date dateEmission;
    -Float amountGross;
    -Float amountNet;
    -List<Perception> listPerception;
    -List<Deduction> listDeduction;
}

class Perception{
    -String description;
    -Float amount;
}

Employee "1" -- "*" Contrac : tiene >
Employee "1" -- "*" Paysheet : genera >
Contrac "1" -- "*" Complement : incluye >
Contrac "1" -- "*" Triennium : acumula >
Employee "1" -- "*" Position : ocupa >
Paysheet "1" -- "*" Perception : incluye >
Paysheet "1"  -- "*" Deduction : incluye >
Deduction "1" -- "*" Section : tiene >
@enduml
